1.1.12p7:
    Multisite:
    * FIX: detail view of host was missing column headers
    * FIX: fix problem on IE with background color 'white'
    * FIX: fix hitting enter in host search form on IE

    Checks & Agents:
    * FIX: fixed man pages of h3c_lanswitch_sensors and statgrab_cpu
    * FIX: netapp_volumes: added raid4 as allowed state (thanks to Michaël Coquard)
    * HP-UX Agent: fix mrpe (remove echo -e and test -e, thanks to Philipp Lemke)

    Livestatus
    * FIX: fix type column in 'GET columns' for dict-type columns (bug found
      by Gerhard Lausser)

1.1.12p6:
    Checks & Agents:
    * FIX: lnx_if: remove debug output (left over from 1.1.12p5)
    
1.1.12p5:
    Multisite:
    * FIX: fix hitting enter in Quicksearch on IE 8
    * FIX: event/log views: reverse sorting, so that newest entries
      are shown first
    * FIX: fix dashboard dashlet background on IE
    * FIX: fix row highlight in status GUI on IE 7/8
    * FIX: fix row highlight after status page reload
    * FIX: single dataset layout honors column header settings
    * FIX: quote '#' in PNP links (when # is contained in services)
    * FIX: quote '#' in PNP image links also
    * FIX: add notifications to host/service event view

    Checks & Agents:
    * FIX: lnx_if: assume interfaces as up if ethtool is missing or
      not working but interface has been used since last reboot. This
      fixes the problem where interface are not found by inventory.
    * FIX: snmp_uptime: handels alternative timeformat
    * FIX: netapp_*: scan functions now detect IBM versions of firmware
    * FIX: bluecoat_diskcpu: repair scan function
    * FIX: mem.vmalloc: fix default levels (32 and 64 was swapped)
    * FIX: smart: make levels work (thanks to Bernhard Schmidt)
    * FIX: PNP template if if/if64: reset LC_ALL, avoids syntax error
    * FIX: dell_powerconnect_cpu: handle sporadic incomplete output
      from SNMP agent

1.1.12p4:
    Multisite: